Remove 'hidden' category, prepare categories HTML description.
